fix - dashboard navbar not showing full height when no rooms created

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,10 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
-// html,
-// body {
-//   height: 100%;
-// }
+html,
+body {
+  height: 100%;
+}
 
 body {
   margin: 0;
